# movieasy-backend

./: .env.dev  .gitignore  HELP.md  README.md  build.gradle  manage.py  pyproject.toml
movieasy_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/main/java/site/movieasy/server/: ServerApplication.java
src/main/java/site/movieasy/server/controller/: UserController.java
src/main/java/site/movieasy/server/converter/: OauthProviderConverter.java
src/main/java/site/movieasy/server/domain/: OauthProvider.java  User.java
src/main/resources/: application.yaml
src/test/java/site/movieasy/server/: ServerApplicationTests.java
