[tool.poetry]
name = "movieasy-backend"
version = "0.1.0"
description = ""
authors = ["Guntak Kim <caputdraconis@kakao.com>"]
readme = "README.md"
packages = [{include = "movieasy_backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
